RESOLVED FIXED282055
WebDriver: unable to run tests using debug safaridriver, hitting ASSERT(!decoder.destinationID());
https://bugs.webkit.org/show_bug.cgi?id=282055
Summary WebDriver: unable to run tests using debug safaridriver, hitting ASSERT(!deco...
Blaze Burg
Reported 2024-10-24 11:47:19 PDT
.
Attachments
Blaze Burg
Comment 1 2024-10-24 12:00:39 PDT
Radar WebKit Bug Importer
Comment 2 2024-10-31 11:48:16 PDT
EWS
Comment 3 2024-11-06 11:02:59 PST
Committed 286231@main (0097369444dd): <https://commits.webkit.org/286231@main> Reviewed commits have been landed. Closing PR #35684 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.